--- a/test5.html
+++ b/test5.html
@@ -1,5 +1,12 @@
 <!doctype html public "-//W3C//DTD HTML 4.01 Transitional//EN">
+//No hace parte de la sintaxis, simplemente señala el tipo de documento
+
 <!-- Valid example from spec -->
+//son comentarios, no afectan la estructura del documento
+
+//cosas en comun: <!
+
+
 <html>
   <head>
     <title>Turtles are cool</title>
