--- a/test6.html
+++ b/test6.html
@@ -1,5 +1,6 @@
 <!doctype html public "-//W3C//DTD HTML 4.01 Transitional//EN">
 <!-- Invalid example from spec -->
+<!--esta mal la sintaxis del etiquetado>
 <html>
   <head>
     <title>Turtles are cool 
